# graph

./: CMakeLists.txt  LICENSE  README.md
cmake/Modules/: Findjansson.cmake
src/: CMakeLists.txt  Edge.cpp  Edge.h  Graph.cpp  Graph.h  MetaDataContainer.cpp  MetaDataContainer.h  Node.cpp  Node.h
